--- a/experiments/experiments.ipynb
+++ b/experiments/experiments.ipynb
@@ -580,10 +580,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'lambda_l1': 0.0,\n",
+       " 'lambda_l2': 0.0,\n",
+       " 'num_leaves': 3,\n",
+       " 'feature_fraction': 0.7,\n",
+       " 'bagging_fraction': 0.913193379727163,\n",
+       " 'bagging_freq': 6,\n",
+       " 'min_child_samples': 20}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_pickle('./resources/scripts/train/tuning/TuningLGB_dc577e07ed4e54ef8fcb48cfa6c831fd.pkl')['best_params']"
+   ]
   }
  ],
  "metadata": {
