nyaggleを用いての実験できるように整備

--- a/experiments/nyaggle.ipynb
+++ b/experiments/nyaggle.ipynb
@@ -21,6 +21,7 @@
     "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
     "from nyaggle.experiment import run_experiment\n",
+    "from thunderbolt import Thunderbolt\n",
     "from sklearn.metrics import roc_auc_score\n",
     "import os\n",
     "import numpy as np"
@@ -636,10 +637,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tb = Thunderbolt('./resources')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'target_columns': 'bin_0,bin_1,bin_2,bin_3,bin_4,nom_0,nom_1,nom_2,nom_3,nom_4,nom_5,nom_6,nom_7,nom_8,nom_9,ord_0,ord_1,ord_2,ord_3,ord_4,ord_5,day,month',\n",
+       " 'smoothing': '0.8'}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tb.get_task_df().query('task_name == \"TargetEncode\"').loc[55, 'task_params']"
+   ]
   }
  ],
  "metadata": {
